# learning-rust

./: .gitignore  README.md  learning-rust.code-workspace
example-project/: Cargo.toml
example-project/src/: example_module.rs  main.rs  math.rs
example-project/src/math/: add.rs  sub.rs
exercism-solutions/rust/accumulate/: README.md
exercism-solutions/rust/accumulate/.exercism/: metadata.json
exercism-solutions/rust/allergies/.exercism/: metadata.json
exercism-solutions/rust/allergies/src/: lib.rs
exercism-solutions/rust/alphametics/: Cargo.toml
exercism-solutions/rust/alphametics/.exercism/: metadata.json
exercism-solutions/rust/alphametics/benches/: alphametics.rs
exercism-solutions/rust/alphametics/src/: lib.rs  main.rs
exercism-solutions/rust/assembly-line/.exercism/: metadata.json
exercism-solutions/rust/assembly-line/src/: lib.rs
exercism-solutions/rust/binary-search/: README.md
exercism-solutions/rust/binary-search/.exercism/: metadata.json
exercism-solutions/rust/binary-search/src/: lib.rs
exercism-solutions/rust/circular-buffer/.exercism/: metadata.json
exercism-solutions/rust/circular-buffer/src/: lib.rs
exercism-solutions/rust/custom-set/: README.md
exercism-solutions/rust/custom-set/.exercism/: metadata.json
exercism-solutions/rust/custom-set/src/: lib.rs
exercism-solutions/rust/decimal/: Cargo.toml  README.md
exercism-solutions/rust/decimal/.exercism/: metadata.json
exercism-solutions/rust/decimal/src/: lib.rs
exercism-solutions/rust/dominoes/: README.md
exercism-solutions/rust/dominoes/.exercism/: metadata.json
exercism-solutions/rust/dot-dsl/: README.md
exercism-solutions/rust/dot-dsl/.exercism/: metadata.json
exercism-solutions/rust/dot-dsl/src/: lib.rs
exercism-solutions/rust/doubly-linked-list/: README.md
exercism-solutions/rust/doubly-linked-list/.exercism/: metadata.json
exercism-solutions/rust/fizzy/.exercism/: metadata.json
exercism-solutions/rust/fizzy/src/: lib.rs
exercism-solutions/rust/forth/.exercism/: metadata.json
exercism-solutions/rust/forth/src/: lexer.rs  lib.rs  stack.rs  symbols.rs
exercism-solutions/rust/forth/tests/: forth.rs
exercism-solutions/rust/gigasecond/.exercism/: metadata.json
exercism-solutions/rust/gigasecond/src/: lib.rs
exercism-solutions/rust/grade-school/.exercism/: metadata.json
exercism-solutions/rust/grade-school/src/: lib.rs
exercism-solutions/rust/grep/: README.md
exercism-solutions/rust/grep/.exercism/: metadata.json
exercism-solutions/rust/hamming/.exercism/: metadata.json
exercism-solutions/rust/hamming/src/: lib.rs
exercism-solutions/rust/knapsack/: README.md
exercism-solutions/rust/knapsack/src/: lib.rs
exercism-solutions/rust/luhn/: README.md
exercism-solutions/rust/magazine-cutout/: README.md
exercism-solutions/rust/nth-prime/: README.md
exercism-solutions/rust/paasio/: README.md
exercism-solutions/rust/parallel-letter-frequency/: README.md
exercism-solutions/rust/queen-attack/: README.md
exercism-solutions/rust/react/: README.md
exercism-solutions/rust/rectangles/: Cargo.toml  README.md
exercism-solutions/rust/simple-linked-list/: README.md
exercism-solutions/rust/variable-length-quantity/: README.md
exercism-solutions/rust/wordy/: README.md
exercism-solutions/rust/xorcism/: README.md
rust-book/: Cargo.toml
rust-book/book/: Cargo.toml
rust-book/book/src/: 10_generics_largest_using_ref.rs  11_tests.rs  13_functional_features.rs  15_smart_pointers_ref_cycles.rs  15_smart_pointers_refcell.rs  16_concurrency.rs  17_oop_features.rs  18_patterns_matching.rs  19_advanced_functions_and_closures.rs  19_advanced_traits.rs  19_advanced_types.rs  19_macros.rs  19_unsafe_rust.rs  3_common_programming_concepts_loops.rs  5_structs.rs  8_hashmaps.rs  generics.rs  oop_features_state_pattern.rs  oop_features_state_pattern_types.rs  smart_pointers.rs
rust-book/minigrep/: Cargo.toml  README.md
rust-book/minigrep/src/: lib.rs  main.rs
rust-book/src/: enums.rs  error_handling.rs  lifetimes.rs
rust-book/web-server/src/: lib.rs
src/: main.rs
(+54 files in other folders)
