[package]
edition = "2021"
name = "rust-book"
version = "0.1.0"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "hashmaps"
path = "src/hashmaps.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "generics_largest_using_ref"
path = "src/generics_largest_using_ref.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"