[package]
edition = "2021"
name = "rust-book"
version = "0.1.0"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "hashmaps"
path = "src/hashmaps.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "generics_largest_using_ref"
path = "src/generics_largest_using_ref.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

[[bin]]
name = "functional_features"
path = "src/functional_features.rs"

[[bin]]
name = "smart_pointers"
path = "src/smart_pointers.rs"

[[bin]]
name = "smart_pointers_refcell"
path = "src/smart_pointers_refcell.rs"

[[bin]]
name = "smart_pointers_ref_cycles"
path = "src/smart_pointers_ref_cycles.rs"

[[bin]]
name = "concurrency"
path = "src/concurrency.rs"

[[bin]]
name = "oop_features"
path = "src/oop_features.rs"

[[bin]]
name = "oop_features_state_pattern_types"
path = "src/oop_features_state_pattern_types.rs"

[[bin]]
name = "oop_features_state_pattern"
path = "src/oop_features_state_pattern.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"