[package]
edition = "2021"
name = "rust-book"
version = "0.1.0"

[[bin]]
name = "5_structs"
path = "src/5_structs.rs"

[[bin]]
name = "6_enums"
path = "src/6_enums.rs"

[[bin]]
name = "8_hashmaps"
path = "src/8_hashmaps.rs"

[[bin]]
name = "9_error_handling"
path = "src/9_error_handling.rs"

[[bin]]
name = "10_generics"
path = "src/10_generics.rs"

[[bin]]
name = "10_generics_largest_using_ref"
path = "src/10_generics_largest_using_ref.rs"

[[bin]]
name = "10_lifetimes"
path = "src/10_lifetimes.rs"

[[bin]]
name = "11_tests"
path = "src/11_tests.rs"

[[bin]]
name = "13_functional_features"
path = "src/13_functional_features.rs"

[[bin]]
name = "15_smart_pointers"
path = "src/15_smart_pointers.rs"

[[bin]]
name = "15_smart_pointers_refcell"
path = "src/15_smart_pointers_refcell.rs"

[[bin]]
name = "15_smart_pointers_ref_cycles"
path = "src/15_smart_pointers_ref_cycles.rs"

[[bin]]
name = "16_concurrency"
path = "src/16_concurrency.rs"

[[bin]]
name = "17_oop_features"
path = "src/17_oop_features.rs"

[[bin]]
name = "17_oop_features_state_pattern_types"
path = "src/17_oop_features_state_pattern_types.rs"

[[bin]]
name = "17_oop_features_state_pattern"
path = "src/17_oop_features_state_pattern.rs"

[[bin]]
name = "18_patterns_matching"
path = "src/18_patterns_matching.rs"

[[bin]]
name = "19_unsafe_rust"
path = "src/19_unsafe_rust.rs"

[[bin]]
name = "19_advanced_traits"
path = "src/19_advanced_traits.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"